...
        android:id="@+id/list_View"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/send_Button"/>

    <EditText
        android:id="@+id/chat_Edit_Text"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/send_Button"/>

...
