...
        android:gravity="fill"
        >

    </RadioButton>

    <CheckBox
        android:id="@+id/checkbox_Button"
        android:layout_width="wrap_content"
        android:text="@string/check_Box_Text"
        android:layout_columnWeight="1"
        android:gravity="fill">
    </CheckBox>

    <Switch
        android:id="@+id/switch_Button"
        android:text="@string/switch_Text"
        android:layout_width="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill">
    </Switch>

...
